remove (heavy) dependency on httpsclient on ExternalIdUtil